# CPack-Multi-Config

./: CMakeLists.txt
executable/: CMakeLists.txt
executable/src/: executable.cpp
